--- a/ansible/templates/gnome-desktop-template.j2
+++ b/ansible/templates/gnome-desktop-template.j2
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
-Name='{{ item.value.desktop_name }}'
-Exec='{{ item.value.desktop_name }}' 
-Icon='{{ item.value.desktop_name }}'
+Name={{ item.value.desktop_name }}
+Exec={{ desktop_dir }}{{ item.key }}/{{ item.value.desktop_exec }}
+Icon={{ desktop_dir }}{{ item.key }}/{{ item.value.desktop_icon }}
 Type=Application
