--- a/ansible/templates/gnome-desktop-template.j2
+++ b/ansible/templates/gnome-desktop-template.j2
@@ -3,4 +3,4 @@ Type=Application
 Name={{ item.value.desktop_name }}
 Exec={{ desktop_dir }}{{ item.key }}/{{ item.value.desktop_exec }}
 Icon={{ desktop_dir }}{{ item.key }}/{{ item.value.desktop_icon }}
-Type=Application
+Terminal=true
