--- a/ansible/templates/gnome-desktop-template.j2
+++ b/ansible/templates/gnome-desktop-template.j2
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
 Name={{ item.value.desktop_name }}
-Exec={{ desktop_dir }}{{ item.key }}/{{ item.value.desktop_exec }}
-Icon={{ desktop_dir }}{{ item.key }}/{{ item.value.desktop_icon }}
+Exec={{ desktop_dir }}/apps/{{ item.key }}/{{ item.value.desktop_exec }}
+Icon={{ desktop_dir }}/apps/{{ item.key }}/{{ item.value.desktop_icon }}
 Terminal=true
