added ability to add to menu and remove from desktop

--- a/ansible/templates/gnome-desktop-template.j2
+++ b/ansible/templates/gnome-desktop-template.j2
@@ -4,3 +4,4 @@ Name={{ item.value.desktop_name }}
 Exec={{ desktop_dir }}/apps/{{ item.key }}/{{ item.value.desktop_exec }}
 Icon={{ desktop_dir }}/apps/{{ item.key }}/{{ item.value.desktop_icon }}
 Terminal=true
+Categories={{ item.value.menu_category}}
