--- a/ansible/templates/app-start-dockercompose.j2
+++ b/ansible/templates/app-start-dockercompose.j2
@@ -1,1 +1,1 @@
-docker-compose -f {{ desktop_dir }}/apps/{{ item.key }}/docker_compose.yml up
+docker-compose -f {{ desktop_dir }}/apps/{{ item.key }}/docker-compose.yml up
