--- a/ansible/templates/app-start-docker.j2
+++ b/ansible/templates/app-start-docker.j2
@@ -23,8 +23,8 @@ docker run \
 --device /dev/snd \
 {% endif %}
 {% if item.value.share_themes == true %}
--v /usr/share/themes/:/usr/share/themes/ 
--v ~/.gtkrc-2.0:{{ item.value.container_home }}.gtkrc-2.0
+-v /usr/share/themes/:/usr/share/themes/ \
+-v ~/.gtkrc-2.0:{{ item.value.container_home }}.gtkrc-2.0 \
 {% endif %}
 {% if item.value.docker_volumes != None %}
 {{ item.value.docker_volumes }} \
