--- a/ansible/templates/20-intel.j2
+++ b/ansible/templates/20-intel.j2
@@ -2,4 +2,6 @@ Section "Device"
  Identifier  "Intel Graphics" 
  Driver      "intel"
  Option      "Backlight"  "intel_backlight"
+ Option      "AccelMethod"
+ Option      "TearFree"  "true"
 EndSection
