--- a/ansible/templates/start-script-gnome.j2
+++ b/ansible/templates/start-script-gnome.j2
@@ -1,3 +1,4 @@
+xhost +
 sudo rm -rf /tmp/pulseaudio.socket
 sudo pactl load-module module-native-protocol-unix socket=/tmp/pulseaudio.socket
 sudo rm -f /tmp/pulseaudio.client.conf 
